@@ -23,7 +23,6 @@ AC_SUBST(EXEEXT)
 AC_SUBST(W3M_TARGET)
 W3M_TARGET=$target
 AC_DEFINE_UNQUOTED(W3M_TARGET, $W3M_TARGET)
-AC_W3M_VERSION
 
 AC_W3M_LANG
 AC_W3M_KANJI_SYMBOLS
@@ -124,4 +123,6 @@ AC_W3M_SYS_ERRLIST
 AC_W3M_SIGSETJMP
 AC_W3M_SIGNAL
 
+AC_W3M_VERSION
 AC_OUTPUT(Makefile w3mhelp-w3m_en.html w3mhelp-w3m_ja.html w3mhelp-lynx_en.html w3mhelp-lynx_ja.html)
+
